--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 		</div>
 		<section id="nav-bar">
 			<div class="container row">
-				<a href="#" class="col-12 col-sm-2 col-lg-2 icon-user col-2">Thông tin</a>
-				<a href="#" class="col-12 col-sm-2 col-lg-2 icon-doc-text-inv col-2">Lý lịch</a>
-				<span class="	   col-12 col-sm-1 col-lg-4"></span>
-				<a href="#" class="col-12 col-sm-2 col-lg-2 icon-mail-alt col-2">Chứng chỉ</a>
-				<a href="#" class="col-12 col-sm-2 col-lg-2 icon-star-1 col-2">Dự Án</a>
+				<a href="#" class="col-xs-12 col-sm-2 col-lg-2 icon-user col-2">Thông tin</a>
+				<a href="#" class="col-xs-12 col-sm-2 col-lg-2 icon-doc-text-inv col-2">Lý lịch</a>
+				<span class="	   col-xs-12 col-sm-1 col-lg-4"></span>
+				<a href="#" class="col-xs-12 col-sm-2 col-lg-2 icon-mail-alt col-2">Chứng chỉ</a>
+				<a href="#" class="col-xs-12 col-sm-2 col-lg-2 icon-star-1 col-2">Dự Án</a>
 				
 			</div>
 		</section>
 		<section id="about" class="bg-grey">
 			<div class="container row">
-				<div class="col-12 col-sm-5">
+				<div class="col-xs-12 col-sm-5">
 					<h2>Mục tiêu nghề nghiệp</h2>				
 					<p class="mt-4">
 						Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh
@@ -44,7 +44,7 @@
 						bản thân, cũng như hoàn thành tốt nhất công việc được giao.
 					</p>
 				</div>
-				<div class="col-12 col-sm-5 mx-5 px-5">
+				<div class="col-xs-12 col-sm-5 mx-5 px-5">
 					<h2>Thông tin cá nhân</h2>
 					<div class="mt-4 info">
 						<p><b>Giới tính</b> : Nam</p>
@@ -71,7 +71,7 @@
 		<section id="job-info">
 			<div class="container">
 				<div class="row">
-					<div class="job-infos col-12 col-sm-6 col-lg-4" onmouseover="handleOnmouseover(this)" onmouseout="handleOnmouseout(this)">
+					<div class="job-infos col-xs-12 col-sm-6 col-lg-4" onmouseover="handleOnmouseover(this)" onmouseout="handleOnmouseout(this)">
 						<div class="row">
 							<h2 class="col-9 m-3">Kinh nghiệm</h2>
 							<span class="col-1 ic-toolbox icon"></span>
@@ -99,7 +99,7 @@
 							<button type="button" class="btn btn-warning view-more control-view" onclick="handleViewMore(this)">View more</button>
 						</div>
 					</div>
-					<div class="job-infos col-12 col-sm-6 col-lg-4" onmouseover="handleOnmouseover(this)" onmouseout="handleOnmouseout(this)">
+					<div class="job-infos col-xs-12 col-sm-6 col-lg-4" onmouseover="handleOnmouseover(this)" onmouseout="handleOnmouseout(this)">
 						<div class="row">
 							<h2 class="col-9 m-3">Học vấn</h2>
 							<span class="col-1 ic-pencil icon"></span>
@@ -125,7 +125,7 @@
 							<button type="button" class="btn btn-warning view-more control-view" onclick="handleViewMore(this)">View more</button>
 						</div>
 					</div>
-					<div class="job-infos col-12 col-sm-6 col-lg-4" onmouseover="handleOnmouseover(this)" onmouseout="handleOnmouseout(this)">
+					<div class="job-infos col-xs-12 col-sm-6 col-lg-4" onmouseover="handleOnmouseover(this)" onmouseout="handleOnmouseout(this)">
 						<div class="row">
 							<h2 class="col-9 m-3">Hoạt động</h2>
 							<span class="col-1 ic-toolbox icon"></span>
@@ -150,7 +150,7 @@
 							<button type="button" class="btn btn-warning view-more control-view" onclick="handleViewMore(this)">View more</button>
 						</div>
 					</div>
-					<div class="job-infos col-12 col-sm-6 col-lg-4" onmouseover="handleOnmouseover(this)" onmouseout="handleOnmouseout(this)">
+					<div class="job-infos col-xs-12 col-sm-6 col-lg-4" onmouseover="handleOnmouseover(this)" onmouseout="handleOnmouseout(this)">
 						<div class="row">
 							<h2 class="col-9 m-3">Sở thích</h2>
 							<span class="col-1 ic-telescope icon"></span>
@@ -169,7 +169,7 @@
 							<button type="button" class="btn btn-warning view-more control-view" onclick="handleViewMore(this)">View more</button>
 						</div>
 					</div>
-					<div class="job-infos col-12 col-sm-6 col-lg-4" onmouseover="handleOnmouseover(this)" onmouseout="handleOnmouseout(this)">
+					<div class="job-infos col-xs-12 col-sm-6 col-lg-4" onmouseover="handleOnmouseover(this)" onmouseout="handleOnmouseout(this)">
 						<div class="row">
 							<h2 class="col-9 m-3">Kỹ năng</h2>
 							<span class="col-1 ic-tools-2 icon"></span>
@@ -196,7 +196,7 @@
 							<button type="button" class="btn btn-warning view-more control-view" onclick="handleViewMore(this)">View more</button>
 						</div>
 					</div>
-					<div class="job-infos col-12 col-sm-6 col-lg-4" onmouseover="handleOnmouseover(this)" onmouseout="handleOnmouseout(this)">
+					<div class="job-infos col-xs-12 col-sm-6 col-lg-4" onmouseover="handleOnmouseover(this)" onmouseout="handleOnmouseout(this)">
 						<div class="row">
 							<h2 class="col-9 m-3">Ngôn ngữ</h2>
 							<span class="col-1 ic-mic icon"></span>
