--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<span>Học viên CCND Nhật Bản</span>
 			</div>
 			<img src="./images/banner2.jpg" alt="" class="img-fluid">
-			<img class="anh-nangcao d-xs-none d-sm-none d-lg-block" src="./images/cá nhân.jpg" alt="">
+			<img class="anh-nangcao d-none d-lg-block" src="./images/cá nhân.jpg" alt="">
 		</div>
 		<section id="nav-bar">
 			<div class="container row">
