--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 	<link rel="stylesheet" href="./css/desktop.css">
 	<link rel="stylesheet" href="./css/tablet.css">
-	<link rel="stylesheet" media="screen and (max-with:767px)" href="./css/mobie.css">
+	<link rel="stylesheet" href="./css/mobie.css">
+	<!-- <link rel="stylesheet" media="screen and (max-with:575px)" href="./css/mobie.css"> -->
 </head>
 <body>
 	<article>
@@ -20,21 +21,20 @@
 				<span>Học viên CCND Nhật Bản</span>
 			</div>
 			<img src="./images/banner2.jpg" alt="" class="img-fluid">
-			<img class="anh-nangcao d-none d-lg-block" src="./images/cá nhân.jpg" alt="">
+			<img class="anh-nangcao" src="./images/cá nhân.jpg" alt="">
 		</div>
 		<section id="nav-bar">
 			<div class="container row">
-				<a href="#" class="col-xs-12 col-sm-2 col-lg-2 icon-user col-2">Thông tin</a>
-				<a href="#" class="col-xs-12 col-sm-2 col-lg-2 icon-doc-text-inv col-2">Lý lịch</a>
-				<span class="	   col-xs-0 col-sm-1 col-lg-4"></span>
-				<a href="#" class="col-xs-12 col-sm-2 col-lg-2 icon-mail-alt col-2">Chứng chỉ</a>
-				<a href="#" class="col-xs-12 col-sm-2 col-lg-2 icon-star-1 col-2">Dự Án</a>
-				
+				<a href="#" class="col-7 col-sm-2 col-lg-2 icon-user col-2">Thông tin</a>
+				<a href="#" class="col-7 col-sm-2 col-lg-2 icon-doc-text-inv col-2">Lý lịch</a>
+				<i class="col-7 col-sm-1 col-lg-4"></i>
+				<a href="#" class="col-7 col-sm-2 col-lg-2 icon-mail-alt col-2">Chứng chỉ</a>
+				<a href="#" class="col-7 col-sm-2 col-lg-2 icon-star-1 col-2">Dự Án</a>
 			</div>
 		</section>
 		<section id="about" class="bg-grey">
 			<div class="container row">
-				<div class="col-xs-11 col-sm-5">
+				<div class="col-xs-12 col-sm-4 col-lg-6">
 					<h2>Mục tiêu nghề nghiệp</h2>				
 					<p class="mt-4">
 						Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh
@@ -44,7 +44,7 @@
 						bản thân, cũng như hoàn thành tốt nhất công việc được giao.
 					</p>
 				</div>
-				<div class="col-xs-11 col-sm-5 mx-5 px-5">
+				<div class="col-xs-12 col-sm-3 col-lg-4 ms-5 ps-5">
 					<h2>Thông tin cá nhân</h2>
 					<div class="mt-4 info">
 						<p><b>Giới tính</b> : Nam</p>
