--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 		</div>
 		<section id="nav-bar">
 			<div class="container row">
-				<a href="#" class="col-7 col-sm-2 col-lg-2 icon-user col-2">Thông tin</a>
-				<a href="#" class="col-7 col-sm-2 col-lg-2 icon-doc-text-inv col-2">Lý lịch</a>
+				<a href="#" class="col-7 col-sm-2 icon-user col-2">Thông tin</a>
+				<a href="#" class="col-7 col-sm-2 icon-doc-text-inv col-2">Lý lịch</a>
 				<i class="col-7 col-sm-1 col-lg-4"></i>
-				<a href="#" class="col-7 col-sm-2 col-lg-2 icon-mail-alt col-2">Chứng chỉ</a>
-				<a href="#" class="col-7 col-sm-2 col-lg-2 icon-star-1 col-2">Dự Án</a>
+				<a href="#" class="col-7 col-sm-2 icon-mail-alt col-2">Chứng chỉ</a>
+				<a href="#" class="col-7 col-sm-2 icon-star-1 col-2">Dự Án</a>
 			</div>
 		</section>
 		<section id="about" class="bg-grey">
@@ -44,7 +44,7 @@
 						bản thân, cũng như hoàn thành tốt nhất công việc được giao.
 					</p>
 				</div>
-				<div class="col-xs-12 col-sm-3 col-lg-4 ms-5 ps-5">
+				<div class="col-xs-12 col-sm-3 col-lg-4">
 					<h2>Thông tin cá nhân</h2>
 					<div class="mt-4 info">
 						<p><b>Giới tính</b> : Nam</p>
